tests/ifcc-test-output/testfiles-3_01_00_var_name_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:12: warning: missing terminating ' character
    2 |     int won'twork;
      |            ^
input.c:2:12: error: missing terminating ' character
    2 |     int won'twork;
      |            ^~~~~~~
input.c:3:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
    3 | }
      | ^

return code: 1
